--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
     margin: 0;
 }
 
-p, li, em {
+p, li, em, td {
     color: var(--grey);
 }
 
@@ -49,10 +49,19 @@ pre, code {
     font-family: "CMU Mono";
 }
 
-img {
+td, th {
+    padding: 2px 10px;
+}
+
+.image-center {
     left: 15%;
     position: relative;
     width: 70%;
+}
+
+td, th {
+    border: 1px solid var(--grey);
+    word-wrap: break-word;
 }
 
 .index-personal-logo {
