--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
     --grey4: #bbb;
     --gold: rgb(218, 193, 54);
 
-    --side-gutter-width: 20%;
+    --side-gutter-width: max(2em, calc( (100% - 100ch) / 2));
     --body-max-width: 80em;
     --footer-height: 120px;
     --header-height: 5%;
