--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,10 @@ td, th {
     text-decoration: none;
 }
 
+.header-button * {
+    font-size: large;
+}
+
 .header-button-space {
     margin-left: 0.8em;
 }
