--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ pre, code {
 .index-personal-logo {
     left: calc(50% - 40px);
     position: relative;
-    width: 80;
+    width: 80px;
 }
 
 .main {
