Scroll overflowed code blocks

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,10 @@ pre, code {
     font-family: monospace;
 }
 
+pre {
+    overflow: scroll;
+}
+
 .image-center {
     left: 15%;
     position: relative;
